# caniuseonlywheels

./: .env_example  .gitignore  CONTRIBUTING.md  Pipfile  README.md  build.sh  hypothetical_requirements.txt  pyproject.toml  requirements.txt  test.sh
.github/workflows/: build.yml
caniuseonlywheels/: __init__.py  __main__.py  command.py  dependencies.py  overrides.json  overrides.txt  projects.py  pypi.py
caniuseonlywheels/distlib/: __init__.py  compat.py  database.py  index.py  locators.py  metadata.py  scripts.py  util.py  wheel.py
caniuseonlywheels/distlib/_backport/: shutil.py  tarfile.py
caniuseonlywheels/test/: custom_temp_file.py  test_check.py  test_cli.py  test_command.py  test_dependencies.py  test_pypi.py
distlib/: util.py
test/: __init__.py  custom_temp_file.py  test_check.py  test_cli.py  test_command.py  test_dependencies.py  test_pypi.py
